--- a/posts/2021-12-13-Summary-of-CS725.md
+++ b/posts/2021-12-13-Summary-of-CS725.md
@@ -28,11 +28,12 @@ University. Here are some differences.
 last lesson was about system security. Most of the time, I did not listen or
 just skipped lessons. I chose this seminar because I needed two more credits and
 there was no more security-focused seminars at all. It's better to cut down the
-credit requirement or join a seminar hosted by our supervisors who are free.
+credit requirement or join a seminar hosted by our supervisors who have free
+time.
 
 - The teaching material in this system seminar were the latest papers accepted
 by OSDI and SOSP, which might not be the best choices because we know nothing
-about related work. We may need to write famous and cited papers like in CS-725.
+about the related work. We may need famous and cited papers like in CS-725.
 
 - It's the instructor that introduced papers in class not students. Considering
 not all students were interested in this seminar, this might be a better choice.
@@ -44,4 +45,4 @@ required to find the authors' claims in the paper and fill them into the blanks.
 to spend extra time to prepare the examination. For CS-725, we speed one
 45-minute session for class, and one session for preparing slides and writing
 summary.  For CS-725, the whole time spent on the seminar won't exceed the
-requirement of two credits. We really should learn this!!!
+requirement of two credits. Chinese Universities really should learn this!!!
