--- a/Qiang's CV/affiliation.tex
+++ b/Qiang's CV/affiliation.tex
@@ -1,21 +1,13 @@
 % Write down your affiliation, position, and research topics.
 \begin{rubric}{Affiliation}
-\entry*[2023.11 -- 202x.xx]
+\entry*[2023.02 -- 202x.xx]
 	\textbf{HexHive, EPFL, Switzerland}
-	\par Post.Doc.
-	\par Research topics: TBD
-\entry*[2023.02 -- 2023.09]
-	\textbf{HexHive, EPFL, Switzerland}
-	\par Visiting doctoral student
-	\par Research topics: Operating system security and hypervisor security.
-\entry*[2021.08 -- 2022.03]
-	\textbf{HexHive, EPFL, Switzerland}
-	\par Visiting doctoral student
-	\par Research topics: Dynamic analysis on hypervisors~\cite{videzzo@2023}.
+	\par Visiting doctoral student, Post.Doc. (2023.11)
+	\par Research topics: Hypervisor security~\cite{videzzo@2023,alxdr2024hyperpill}, USB Fuzzing, Network protocol fuzzing
 \entry*[2019.05 -- 2023.09]
 	\textbf{Institute of Cyberspace Research (ICSR), Zhejiang University, China}
 	\par Ph.D. student, Ph.D. candidate (2020.09)
-	\par Research topics: Dynamic analysis on OS kernels~\cite{liu2021firmguide,jiang2021ecmo}.).
+	\par Research topics: Virtualization for Linux-based peripherals~\cite{liu2021firmguide,jiang2021ecmo,videzzo@2023}.
 \entry*[2017.07 -- 2019.04]
     \textbf{Lab of Internet and Security Technology (LIST), Zhejiang University, China}
 	\par Research intern and Ph.D. student (2018.09)
