--- a/Qiang's CV/cv-llt.tex
+++ b/Qiang's CV/cv-llt.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,skipsamekey,11pt,english]{curve}
 
 \usepackage{settings}
+\usepackage{soul}
 
 \ifxetexorluatex % If you're using XeLaTeX or LuaLaTeX
   \usepackage{fontspec} 
@@ -39,8 +40,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \leftheader{
-  {\LARGE\bfseries\sffamily Qiang Liu, Ph.D.} \\
-  {\small Revision: Oct 2023} \\
+  {\LARGE\bfseries\sffamily Qiang Liu, Ph.D., Post.Doc.} \\
+  {\small Revision: Feb 2024} \\
   % https://www.ipgp.fr/~moguilny/LaTeX/fontawesome5Icons.pdf 
   \makefield{\faEnvelope[regular]}{\texttt{cyruscyliu@gmail.com}}
   \makefield{\faHome}{\url{https://cyruscyliu.github.io/}}
