--- a/Qiang's CV/education.tex
+++ b/Qiang's CV/education.tex
@@ -24,7 +24,7 @@
 \entry*[2018.09 -- 2019.05]
 	\textbf{Ph.D. Student, Computer Science}
 	\par {College of Computer Science, Zhejiang University, China}
-	\par Advisor: Yan Chen (Northwestern University)
+	\par Advisor: Yan Chen (Northwestern University; Zhejiang University)
 \entry*[2014.09 -- 2018.06]
 	\textbf{Bachelor, Electrical Engineering}
 	\par {School of Electrical Engineering, Beijing Institute of Technology, China} 
@@ -38,7 +38,7 @@
 	the implicit continuous authentication has considerable accuracy, providing
 	support for the introduction of implicit continuous authentication into existing
 	smartphones.}
-	\par Advisor: Yan Chen (Northwestern University)
+	\par Advisor: Yan Chen (Northwestern University; Zhejiang University)
 	\par Co-advisors: Limin Pan and Senlin Luo (Beijing Institute of Technology)
-	\par Mentor: Tiantian Zhu (Zhejiang University of Technology)
+	\par Mentor: Tiantian Zhu (\st{Zhejiang University;} Zhejiang University of Technology)
 \end{rubric}
