--- a/Qiang's CV/honors.tex
+++ b/Qiang's CV/honors.tex
@@ -1,6 +1,6 @@
-\begin{rubric}{Honors and Awards}
-\entry*[2018.01 -- 2018.01]
-    \par First place of ANU's CECS International Summer School Project: \par \url{https://cecs.anu.edu.au/news/smart-cities-focus-inaugural-cecs-international-summer-school}
+% \begin{rubric}{Honors and Awards}
+% \entry*[2018.01 -- 2018.01]
+    % \par First place of ANU's CECS International Summer School Project: \par \url{https://cecs.anu.edu.au/news/smart-cities-focus-inaugural-cecs-international-summer-school}
 % \entry*[2016-2017]
     % \par University-level outstanding Scholarship
     % \par Diwen Scholarship
@@ -11,4 +11,4 @@
     % \par University-level outstanding students
     % \par University-level outstanding Scholarship (twice)
     % \par National Scholarship for Encouragement
-\end{rubric}
+% \end{rubric}
