--- a/Qiang's CV/own-bib.bib
+++ b/Qiang's CV/own-bib.bib
@@ -35,6 +35,13 @@
   year={2023}
 }
 
+@inproceedings{alxdr2024hyperpill,
+  title={HyperPill: Fuzzing for Hypervisor-bugs by leveraging the Hardware Virtualization Interface (to appear)},
+  author={Bulekov, Alexander and Liu, Qiang and  Egele, Manuel and Payer, Mathias},
+  booktitle={{USENIX Security Symposium (Security, CCF A)}},
+  year={2023}
+}
+
 @article{trapcog@2023, 
     author={Ying, Jie and Zhu, Tiantian and Liu, Qiang and Xiong, Chunlin and Weng, Zhengqiu and Chen, Tieming and Fu, Lei and Lv, Mingqi and Wu, Han and Want, Ting and Chen, Yan},
     journal={IEEE Transactions on Mobile Computing (TMC, CCF A)},
