--- a/Qiang's CV/affiliation.tex
+++ b/Qiang's CV/affiliation.tex
@@ -3,7 +3,7 @@
 \entry*[2023.02 -- 202x.xx]
 	\textbf{HexHive, EPFL, Switzerland}
 	\par Visiting doctoral student, Post.Doc. (2023.11)
-	\par Research topics: Hypervisor security~\cite{videzzo@2023,alxdr2024hyperpill}, USB Fuzzing, Network protocol fuzzing
+	\par Research topics: Hypervisor security~\cite{videzzo@2023,alxdr2024hyperpill}, Protocol Fuzzing
 \entry*[2019.05 -- 2023.09]
 	\textbf{Institute of Cyberspace Research (ICSR), Zhejiang University, China}
 	\par Ph.D. student, Ph.D. candidate (2020.09)
