--- a/Qiang's CV/cv-llt.tex
+++ b/Qiang's CV/cv-llt.tex
@@ -41,9 +41,10 @@
 
 \leftheader{
   {\LARGE\bfseries\sffamily Qiang Liu, Ph.D., Post.Doc.} \\
-  {\small Revision: Feb 2024} \\
+  {\small Revision: May 2024} \\
   % https://www.ipgp.fr/~moguilny/LaTeX/fontawesome5Icons.pdf 
   \makefield{\faEnvelope[regular]}{\texttt{cyruscyliu@gmail.com}}
+  \makefield{\faEnvelope[regular]}{\texttt{qiang.liu@epfl.ch}}
   \makefield{\faHome}{\url{https://cyruscyliu.github.io/}}
 }
 
