--- a/Qiang's CV/own-bib.bib
+++ b/Qiang's CV/own-bib.bib
@@ -36,10 +36,10 @@
 }
 
 @inproceedings{alxdr2024hyperpill,
-  title={HyperPill: Fuzzing for Hypervisor-bugs by leveraging the Hardware Virtualization Interface (to appear)},
+  title={HyperPill: Fuzzing for Hypervisor-bugs by leveraging the Hardware Virtualization Interface},
   author={Bulekov, Alexander and Liu, Qiang and  Egele, Manuel and Payer, Mathias},
   booktitle={{USENIX Security Symposium (Security, CCF A)}},
-  year={2023}
+  year={2024}
 }
 
 @article{trapcog@2023, 
