--- a/Qiang's CV/service.tex
+++ b/Qiang's CV/service.tex
@@ -1,4 +1,6 @@
 \begin{rubric}{Service}
+\entry*[2024] 
+    ACM CSUR Reviewer
 \entry*[2022] 
     ASE'22 Artifact Evaluation 
 \entry*[2020.09 -- 2021.06] 
