--- a/Qiang's CV/service.tex
+++ b/Qiang's CV/service.tex
@@ -1,6 +1,6 @@
 \begin{rubric}{Service}
 \entry*[2024] 
-    ACM CSUR Reviewer
+        ACM CSUR, Fuzzing Workshop (FUZZING) 2024
 \entry*[2022] 
     ASE'22 Artifact Evaluation 
 \entry*[2020.09 -- 2021.06] 
