start to look at crypto

--- a/content/posts/2024-05-01-sp24.md
+++ b/content/posts/2024-05-01-sp24.md
@@ -17,12 +17,15 @@ Interesting topics
     + defenses: syscall wall, line-rate cross-host attack prevention, discovery
     of vuls in wireless/usb stacks and kernels ...
 
-Somewhat interesting topics (Web/Network, Architecture, Mobile, IoT/Sensors, Antomotive)
+Somewhat interesting topics (Web/Network, Architecture, Mobile, IoT/Sensors, Antomotive, Cryptography)
 
 - Track 1 - Session 2: Web Security
 - Track 2 - Session 2: Security in the Real World
 - Track 1 - Session 4: Software Supply Chain
+- Trace 3 - Session 2: Crypto with Others
 - Track 3 - Session 4: Passwords and Authentication
+- Track 3 - Session 7: Crypto for Messaging and Storage
+- Track 3 - Session 8: Crypto
 - Track 1 - Session 7: IoT Security
 - Track 1 - Session 10: Provenance and Enterprise Security
 - Track 2 - Session 10: Hardware Sidechannels
@@ -30,12 +33,11 @@ Somewhat interesting topics (Web/Network, Architecture, Mobile, IoT/Sensors, Ant
 - Track 1 - Session 12: Network Security
 - Track 1 - Session 8: Wireless Security and Privacy
 
-Uninteresting topics (Cyrptography, Machine Learning/LLM, Blockchain, Human Factors, Usable Security, Privacy)
+Uninteresting topics (Machine Learning/LLM, Blockchain, Human Factors, Usable Security, Privacy)
 
 - Track 1 - Session 1: Scams and Phishing
 - Track 2 - Session 1: Deep Fakes
 - Track 3 - Session 1: Privacy for Datasets
-- Trace 3 - Session 2: Crypto with Others
 - Track 1 - Session 3: Humans
 - Track 2 - Session 3: LLMs and Security
 - Track 3 - Session 3: Differential Privacy
@@ -46,9 +48,7 @@ Uninteresting topics (Cyrptography, Machine Learning/LLM, Blockchain, Human Fact
 - Track 2 - Session 6: ML Backdoors
 - Track 3 - Session 6: Blockchain I
 - Track 2 - Session 7: ML Defenses I
-- Track 3 - Session 7: Crypto for Messaging and Storage
 - Track 2 - Session 8: ML Defenses II
-- Track 3 - Session 8: Crypto
 - Track 1 - Session 9: Applications of Privacy
 - Track 2 - Session 9: Miscellaneous ML
 - Track 3 - Session 9: Security for Democracy
