--- a/content/posts/2024-07-03-aflnet.md
+++ b/content/posts/2024-07-03-aflnet.md
@@ -1,4 +1,4 @@
-# Tech notes about AFLNet
+# Tech notes about AFLNet/ChatAFL
 
 ## AFLNET supports two channels, one to send and one to receive
 
@@ -12,6 +12,14 @@ the response is sent and acknowledged.
 
 + Use tcpdump to record realistic message exchange (including both requests and responses).
 + Use Wireshark to extract requests.
++ [CHATAFL]: In PROFUZZBENCH, the initial seed corpus of LIVE555 comprises only
+4 types of client requests out of 10 present in the ground truth: DESCRIBE,
+SETUP, PLAY, and TEARDOWN. As it said in the paper, LLM can generate diverse
+messages and approximately 55% (plus 24.5% after fixing the session id) of
+client requests can be directly accepted by the server with the successful
+response code “2xx”.
+
+the capability to enrich the initial seeds.
 
 ## State Machine Learner
 
@@ -34,13 +42,12 @@ input), which can reach the state (including passing by), from the sequence corp
 
 ## Sequence Mutator
 
-+ Given a state s and a message sequence M, AFLNET generates a new sequence M'
-by mutation. In order to ensure that the mutated sequence M' still exercises the
-chosen state s, AFLNET splits the original sequence M into three parts: 1) the
++ AFLNET splits the original sequence M into three parts: 1) the
 prefix M1 is required to reach the selected state s, 2) the candidate
 subsequence M2 contains all messages that can be executed after M1 while still
 remaining in s, and 3) the suffix M3 is simply the left-over subsequence such
-that (M1, M2, M3) = M. The mutated message sequence M' = (M1, mutate(M2), M3).
+that (M1, M2, M3) = M.
++ The mutated message sequence M' = (M1, mutate(M2), M3).
 + Question: does AFLNET gurantee the mutate(M2) still end with state s?
 + In order to mutate the candidate sequence M2, AFLNET supports the replacement,
 insertion, duplication, and deletion of messages
@@ -54,8 +61,14 @@ to the corpus C. A sequence is considered as interesting if the server response
 contains new states or state transitions that have not previously been observed;
 a sequence is interesting also if it covers new branches in the server’s source
 code.
-
-
++ [CHATAFL] LLM can generate the grammar for each type of messages. This is
+one-shot. When mutating, the fuzzer will search in the grammar corpus, mark the
+mutatable fields in the seed, and mutate the seed, instead of asking the LLM to
+generate a new one.
++ [CHATAFL] Of the LLM-generated client requests, 69% to 89% induced a
+transition to a different state, covering all state transitions for each
+individual state. When PlateauLen surpasses MaxPlateau, ChatAFL asks LLM to
+break the coverage wall.
 
 ## Some tips
 
