--- a/content/posts/2018-02-01-ANU暑期学校-我的矛盾.md
+++ b/content/posts/2018-02-01-ANU暑期学校-我的矛盾.md
@@ -4,7 +4,7 @@
 
 补充一些与X君的交流。“用英语思考、大量的基础阅读（课程）以及写作是较好的学习语言的要素”。
 
-以上这些绝对是说的轻松，做起来难。时间，需要时间。如果每天需要3个小时，那就得半年才初见端倪。很显然，不可能每天有那么多的时间。如果，现在让我选择，我大概会进一步压缩社交与生活的时间，让工作的每一天尽可能高效和充实。因为我最近明白过来，不纯粹的休息总是一点意义都没有的。你根本无法得到生活的动力，那种休息纯粹是身体上休息，但精神上的乏不解，一样没有用。工作时段认真工作、享受工作，攒钱度假，走远一些，时间长一些（至少一周），能在极大放松的同时获得极大的能量，可以支撑较长时间的倾情投入。正式打破了之前的平衡一切的理论，获取可以减轻一些痛苦。
+以上绝对是说的轻松，做起来难。时间，需要时间。如果每天需要3个小时，那就得半年才初见端倪。很显然，不可能每天有那么多的时间。如果，现在让我选择，我大概会进一步压缩社交与生活的时间，让工作的每一天尽可能高效和充实。因为我最近明白过来，不纯粹的休息总是一点意义都没有的。你根本无法得到生活的动力，那种休息纯粹是身体上休息，但精神上的乏不解，一样没有用。工作时认真工作、享受工作，攒钱度假，走远一些，时间长一些（至少一周），能在极大放松的同时获得极大的能量，可以支撑较长时间的倾情投入。正式打破了之前的平衡一切的理论，获取可以减轻一些痛苦。
 
 继续说时间。这样我可以做一个较长时间的计划。一个月甚至几个月，工作中有成果有进展。澳大利亚是个旅游的好地方（这句话是个万能的句子）。这里的节奏适合旅游。不要很大的团，几个人一起，要有热情的、要有诗意的、有逻辑的。如果要做一些旅游的计划，就可以来澳洲。工作的环境也很重要，最好是有一个比较独立的空间，可以是开放式的，但要相对不被打扰。这样的工作条件可以让人保持良好的心情、积极的态度。当然团队也很重要，尤其是一个人的科研观念刚刚建立的时候。大多数情况下，是无法活得这样的工作条件的，所以只能随缘了。当然更希望，原则上生活与工作分开。工作的时间可以更长一些，留好需要学习的时间，尽可能压缩吃饭的时间（存疑，外国人吃饭时候聊天才是主业）。
 
