--- a/content/posts/2018-02-07-ANU暑期学校-尾声.md
+++ b/content/posts/2018-02-07-ANU暑期学校-尾声.md
@@ -4,7 +4,7 @@
 
 这人物群像，总不是那么好描述的；判断一个人也是极其的困难。为了让事情变得简单，我们总是愿意采用简单的思维，比如二元对立。一个人是健谈还是寡言，一个人是聪明还是愚笨。但一个人往往要更复杂。这健谈或是寡言，要再加上条件，比如“与陌生人在一起”，才更有谈论的意义。最后，我们可能会得出结论，这个人既是健谈的又是寡言的，看似十分矛盾，实际上又是在不同的条件下成立的。因人的复杂性导致人往往没办法被打一个便签就可以代表他的全部，遇到相似的情况，就要多思考一下，已有的评说背后的真实意图。
 
-人的复杂性又在于人人不同。全世界有70多亿人口，每一个个体都是独一无二的。抛开人种的差异、性别的差异，人人不同的原因在于经历的无限性和思考的无限性；区域内或许会造成经历的同质，但是思考绝不可能是一样的。要想把自己与别人区分开，就要想办法从自己的经历和思考入手。但是，我们面临着一些极大的困境。社会对人的要求有它的传统，我们的榜样总是那样的。人们总是不自觉的被学习各种能力，甚至思维方式和思考内容。我们可以用烙印来形容这种现象。时代的烙印、学校的烙印、家庭的烙印……
+人的复杂性又在于人人不同。全世界有70多亿人口，每一个个体都是独一无二的。抛开人种的、性别的差异，人人不同的原因在于经历的无限性和思考的无限性；区域内或许会造成经历的同质，但是思考绝不可能是一样的。要想把自己与别人区分开，就要想办法从自己的经历和思考入手。但是，我们面临着一些极大的困境。社会对人的要求有它的传统，我们的榜样总是那样的。人们总是不自觉的被学习各种能力，甚至思维方式和思考内容。我们可以用烙印来形容这种现象。时代的烙印、学校的烙印、家庭的烙印……
 
 ## 二
 以上种种复杂性在人群里都表现得十分明显。最活跃的因素、最有趣的部分就是这些形形色色的人。作为一个观察者，面对这些复杂性既欣喜又苦恼。欣喜在于生命的可能性又被扩展，苦恼在于难以把握人最深层的需求和渴望。
