--- a/content/posts/2025-01-02-books.md
+++ b/content/posts/2025-01-02-books.md
@@ -9,7 +9,7 @@
 - 哲学史，科学哲学  
 - 法，儒（论语）释（说佛）道（老子），诸子百家，宗教（欧洲）
 - 鬼谷子《捭阖策》，捭阖，反应，内揵，抵巇，飞箝，忤合；韩非子《说难》
-- 古希腊哲学， 德国古典哲学：为知识奠基，为自由辩护：康德，费希特，谢林，黑格尔，马克思
+- 德国古典哲学：为知识奠基，为自由辩护：康德，费希特，谢林，黑格尔，费尔巴哈，马克思，恩格斯
 - 实践论/矛盾论
 - 程朱理学和陆王心学，了解新儒学
 - 海德格尔
