Update the e-shelf

--- a/content/posts/2025-01-02-books.md
+++ b/content/posts/2025-01-02-books.md
@@ -1,36 +1,85 @@
 [recommended by ChatGPT](./booklist-chatgpt.png)
 
-## 文学  
-- 中国文学史：神话，诗歌，汉赋，诗词，曲，小说  
-- [文艺理论](./29-文学理论%20杨宁.pdf)：文学的本质，读者，作者，文本，世界  
-- 西方文学史：古希腊雅典罗马，中世纪，文艺复兴和资本主义时期  
+>[杜威十进制图书分类法列表](https://zh.wikipedia.org/wiki/%E6%9D%9C%E5%A8%81%E5%8D%81%E9%80%B2%E4%BD%8D%E5%9C%96%E6%9B%B8%E5%88%86%E9%A1%9E%E6%B3%95%E5%88%97%E8%A1%A8)
 
-## 哲学  
-- 哲学史，科学哲学  
-- 法，儒（论语）释（说佛）道（老子），诸子百家，宗教（欧洲）
-- 鬼谷子《捭阖策》，捭阖，反应，内揵，抵巇，飞箝，忤合；韩非子《说难》
-- 德国古典哲学：为知识奠基，为自由辩护：康德，费希特，谢林，黑格尔，费尔巴哈，马克思，恩格斯
-- 实践论/矛盾论
-- 程朱理学和陆王心学，了解新儒学
-- 海德格尔
+下面只记录了读起来有收获的书、课程、论文（不分先后）
 
-## 政治  
-- 政治哲学，政治理念，战争  
-- 君主论，左传，资治通鉴（孙子兵法/尚书/孔子家语/警世恒言）、政治学原理）、社会科学研究方法，中国政治思想、西方政治制度、宪法与行政法，科技政策、劳工政策、教育政策、公共管理、博弈论、国际关系、正义论、战争与理解战争、公共决策和社会管理（公平与妥协）、科技转化和知识产权保护
+## 100 哲学和心理学  
 
-## 语言  
-- 口才，外语，方言  
+- 西方哲学简史（赵敦华）
+- 科学究竟是什么（查尔莫斯）
+- 论语、道德经
+- 韩非，捭阖策
+- 纯粹理性批判、实践理性批判、判断力批判（康德）
+- [俗讲黑格尔](https://www.bilibili.com/video/BV1kp4y1Q7EQ/)
+- 论人的使命（费希特）
+- [中文马克思主义文库](https://www.marxists.org/chinese/index.html)
+- 实践论、矛盾论
+- 苏菲的世界
 
-## 历史  
-- 古代历史，近现代历史，世界历史
+### 150 心理学
 
-## 经济  
-- 宏观，微观  
-- 国富论，博弈论，代谢增长论  
+- 爱的五种能力1-2
 
-## 管理  
+### 160 逻辑学
+
+- 反驳的艺术
+
+### 170 伦理学
+
+- 孔子家语
+- 警世恒言
+
+## 300 社会科学  
+
+### 300 社会科学总论
+
+- 身体由我：关于了不起的女性身体的一切
+- 格调：社会等级和生活品味
+- 恶俗：或现代文明的种种愚蠢
+- 困在底层的人
+- 男性气质
+- 社会学的想象力
+- 社会加速批判和时间分层理论
+
+### 320 政治学
+
+- 统治阶级
+- 权力精英
+- 君主论
+- 左传
+- 资治通鉴
+
+### 330 经济学
+
+- 天使投资科学实战课
 - 管理学，决策，组织，领导，监督，创新  
-- 内隐领导和期望模型，社会加速批判和时间分层理论
+- 内隐领导和期望模型
 
-## 社会  
-- 社会学导论  
+### 350 公共行政
+
+- 孙子兵法
+
+### 390 风俗、礼仪、民俗学
+
+- 优雅，从姿势开始
+
+## 800 文学
+
+## 800 文学和修辞学总论
+
+- 中国现代诗歌研究（李怡，北京师范大学）
+- [文艺理论](./29-文学理论%20杨宁.pdf)：文学的本质，读者，作者，文本，世界
+
+## 890 其他语言文学
+
+- 三体三部曲
+- 马伯庸：长安的荔枝、太白金星有点烦
+- 中国式圈子
+
+## 900 历史和地理
+
+- 费城风云：美国宪法的诞生及其启示
+- 杨振宁传：规范与对称之美
+- 尚书
+
