--- a/content/blog/posts/2018-02-01-ANU暑期学校-我的矛盾.md
+++ b/content/blog/posts/2018-02-01-ANU暑期学校-我的矛盾.md
@@ -1,5 +1,11 @@
+---
+date: 2018-02-01
+---
+
 # ANU暑期学校-我的矛盾
+
 ## 一
+
 说起英语学习，可真是一言难尽。即便是报了补习班，每天也努力地学习，还是觉得不可能把英语学好。老师教、自己学、英语环境，如果说这三点都满足就能把英语学好，怕我早就是英语能手了。事情往往不是那么简单，更何况，从来都没有构建一个英语环境。这次到国外来，也有一些关于构建英语环境的想法，比如，用英语思考、心里默念别人说的话、查看国外动物园的网站……这一次出行，一般的交流用到的词汇几乎没有超过自己的水平（5000左右）;但是稍微正式一点儿的服务与演讲就要涉及更多的词汇了，比如点餐、司机师傅在开车前、途中和终点前的温馨提示。如果要想听懂这些，确实要费些时日。如果把我放在国外，我想我回找一个外国人使劲儿地问，这个什么那是什么，来学习生词和句子。我还会尽可能的阅读英文的介绍和背景知识。我会尽可能地接触生活的每一方面，学习词汇和短语。我会尽可能的与外国人交流，回顾和展望，再进一步讨论文化。总结起来，无非就是最大限度的融入他们。
 
 补充一些与X君的交流。“用英语思考、大量的基础阅读（课程）以及写作是较好的学习语言的要素”。
@@ -13,6 +19,7 @@
 总之，我又拥有了一种新的体悟，可以较少痛苦。投入、调剂，无止境的思考与热情。
 
 ## 二
+
 说起语言学习，不得不说起法语的学习。法语的学习最终让我寻到了一种生命的可能。不知道过去是不是同样的感受，觉得自己的未来已经找到。我这次聪明了，不那么说一定。我想未来几年应该是这样的，而且对这种生活的可能性，让人绝不怀疑。
 
 这种生命让人极其丰富。这种生命要求你极大的融入生活。为什么我刚刚认识到自己要极大的融入生活？高中毕业的时候便有一些萌芽，但是那时候做的只是对学习的反抗，以为不学习就是生活了。其实不是。而新学习一门语言让麻木的神经苏醒，原来，我们那么不了解自己的生活的城市（当然这也有C君对我的刺激），地标、民俗、文化、交通、动物园、科技馆、饮食、天气、法律、电影院，一切一切的生活就在生活之中。重新学习一门语言就需要掌握这些词汇，就需要用耳朵听，用眼睛看，用心去感受。除此之外，学习新语言让我解开了一个疑问：我究竟忘了什么？我忘了要好好地做作业、听课、好好复习，要努力跟上进度，要花费长时间的进行训练和拓展，当然看书一遍不足够，就再来几遍。我所会的只是突击考试罢了。
