--- a/content/blog/posts/2018-02-07-ANU暑期学校-生活和工作.md
+++ b/content/blog/posts/2018-02-07-ANU暑期学校-生活和工作.md
@@ -1,8 +1,15 @@
+---
+date: 2018-02-07
+---
+
 # ANU暑期学校-生活和工作
+
 ## 一
+
 在这里我所定义的生活和工作都是纯粹的。之所以要定义这两种生存状态是因为我常常会在平衡中陷入一方，索性定义两种纯粹的概念，以便区分。
 
 ## 二
+
 生活便是没有工作，工作便是没有生活。
 
 我很容易在生活中迷失，自以为人生就是生活的样子，是纯粹的感受的状态。在这种状态里，你无需解释，你带来的就是一切美。这也蕴含着失控的风险，很容易造成情感和精神崩溃，表现为情感的恣意表达和欲望的无限膨胀。往往需要一条渠道来发泄，同时这条渠道也起到了休止符的作用，让自己在欲望与现实的紧张关系中得到放松，甚至解脱。我发现这条渠道就是写作。写作往往能一次性地卸空最近一段时间的情绪，让人重新变成一块儿干燥的海绵。在尚未开始汲取水分的时候，及时地切换到工作状态中。这是极其理想的状态，因为在事情的开端做决定，总是不会受诸多既定因素牵绊。这样也就免于迷失在生活之中，免于深陷痛苦刻刻灼心。
