--- a/content/blog/posts/2018-03-08-在杭州的100天-第二天.md
+++ b/content/blog/posts/2018-03-08-在杭州的100天-第二天.md
@@ -1,6 +1,11 @@
+---
+date: 2018-03-08
+---
+
 # 在杭州的100天-第二天
 
 ## 第二天
+
 今天才真正的又回到了杭州，今天才是第一天哩！
 
 从北京到杭州的高铁也不过6个半小时罢了。一路上，流水池塘越来越多，冰雪之事早就已经不见了。一日过两季，一路睹两景。现代人得益于快速交通，已经有了许多前人所没有的体验。哪吒日行三千里，过去那只是神话中的想象，现在日行三万里也不是没有可能。人们的足迹可以遍布大江南北，人们的胸襟亦可以极度的舒展。看过了祖国的大好河山，才知道风景这边更好；中国永远适合中国人生存。
