--- a/content/blog/posts/2018-03-10-在杭州的100天-第三天.md
+++ b/content/blog/posts/2018-03-10-在杭州的100天-第三天.md
@@ -1,5 +1,11 @@
+---
+date: 2018-03-10
+---
+
 # 在杭州的100天-第三天
+
 ## 第三天-周一
+
 说实话，写下这段文字的时候已远远在第三天之后。那今天就来个了断，省得一些事情忘了，要么空欢喜一场，要么空悲伤一场。
 
 一睁眼已经接近八点，又顿觉凉意袭来。这天气的变换竟如同小孩儿的脾气一般难以琢磨。顾不了那么多，我赶紧起来，准备洗漱。
@@ -11,11 +17,13 @@
 晚上，我早早就回了宿舍。外面又下起雨来，天气越来越凉了。要再买一床被子！要再买一双棉拖鞋！
 
 ## 第四天-周二
+
 上午开会。
 
 下午开始写文献翻译和开题报告。google翻译在前一段时间有了较大的突破，其对整句的理解能力大大加强1。这是一个非常好的消息，我的文献翻译很快就借助它完成了。若是能根据不同期刊、会议的论文格式做一个自动解析，那就再好不过了。这开题报告可难住了我，我最终采取了一篇tutorial2的建议，写了大概3000字。一直写到后半夜1点。真是像挤牙膏。一般写作，要想写3000字，若是没有几万字的知识量怕是什么也写不出来的。真是难住我了。
 
 ## 第五天-周三
+
 上午开会。
 
 下午开始尝试编写CNN模型并调试。这也是我头一次做类似的工作，过去一段时间也只是“走马观花”，第一次真正的去实现这样一个模型，在细节上难免会有不足。代码编写是一部分工作，更多的时间被我花在tuning上，这更是难上加难。
@@ -23,9 +31,11 @@
 晚上与J君讨论学习内核知识的事宜，商定周周定量学习，周周定时讨论。
 
 ## 第六天-周四
+
 被子到了。真是一件大喜事。铺床铺了很久很久，生怕铺得不平整，晚上会冷。
 
 ## 第七天-周五
+
 冻醒！  
 事实证明  
 屋子里是真的  
