--- a/content/blog/posts/2018-03-11-在杭州的100天-第九天.md
+++ b/content/blog/posts/2018-03-11-在杭州的100天-第九天.md
@@ -1,5 +1,11 @@
+---
+date: 2018-03-11
+---
+
 # 在杭州的100天-第九天
+
 ## 第九天-周六-3-10
+
 昨晚睡觉的时候，特意在床尾一侧放了块儿毯子，今早起来便没有那么冷。
 
 说起宿舍来，难免与母校有一些对比。这房间门、窗漏风是个大问题，12号楼（母校宿舍）在我们住进去之前就做了保温，已经把这些问题解决了，外加上北京的宿舍都装有暖气，春天的时候我从未感到如此不适（冷）。其他方面，这房间整整比12号楼的宿舍大一圈，我可以轻松地在床上站着直起腰来，前后距离有接近3张床；对于宽度，我认为并排也可以摆下3张床。与蜗居北京相比，我这里真算是“豪宅”了。这并不是个独特现象，浙大的任何建筑在空间考量上都是“不节约”的，食堂工作间足足是个小屋子，里面只有一两个工作人员，人均面积我估计在7、8平米以上。实验室的空间更是“奢侈”，工作台的面积一般，但是较分散，人们活动的面积是很大，过堂风可以轻而易举的进来又出去。浙大玉泉校区有极大一部分供人们休息的地方天气适宜的时候便出来晒晒太阳，或席地而坐，或池边雅座，惬意得不得了，人们在这里得到了极大的尊重了。
