--- a/content/blog/posts/2024-04-17-dsl.md
+++ b/content/blog/posts/2024-04-17-dsl.md
@@ -1,3 +1,7 @@
+---
+date: 2024-04-17
+---
+
 # Introduction to Domain-Specific Language
 
 + Term: Domain-specific lauguage v.s. General-purpose language
