--- a/content/blog/posts/2018-01-21-ANU暑期学校-惊奇.md
+++ b/content/blog/posts/2018-01-21-ANU暑期学校-惊奇.md
@@ -1,8 +1,15 @@
+---
+date: 2018-01-21
+---
+
 # ANU暑期学校-惊奇
+
 ## 序
+
 这篇文章才是在ANU暑期学校写下的第一篇文章，编辑的时候把它忘掉了。第一让人占了去，姑且落个第五名罢！
 
 ## 正文
+
 中国人很早就描述过俯瞰之景色，比如“林海雪原”、“松涛阵阵”之类的。中国人也向往飞行，当我乘坐着波音787翱翔在12500公尺的高空中，透着小窗审视四周时，时间和空间都凝固了，不流动亦无所尽；这云海是静的，是波涛汹涌时候的定格；这云海是瓷盘，青花美妙、天穹覆盖。心里是惊叹，脑中是翻涌。中国古代文人，要是有一个能抟扶摇直上九万里，他将写下怎样的千古名篇？惊奇！这里是一个异样的世界。
 
 云层渐渐稀薄，迎面而来的是向心的海水。这太平洋的力量真是难以估量；当他直立在我的面前时，窒息、惊慌，这是怎样的奇景，银河落九天亦有所不如啊！悉尼的夏天热烈而潮湿，没有久留，便奔去了堪培拉。小憩初醒，环顾左右，出了城走树丛环抱的公路，竟跟家乡没有什么分别。不过，渐渐地，也有些乐趣。
