--- a/content/blog/posts/2025-01-02-books.md
+++ b/content/blog/posts/2025-01-02-books.md
@@ -1,3 +1,7 @@
+---
+date: 2025-01-02
+---
+
 [recommended by ChatGPT](./booklist-chatgpt.png)
 
 >[杜威十进制图书分类法列表](https://zh.wikipedia.org/wiki/%E6%9D%9C%E5%A8%81%E5%8D%81%E9%80%B2%E4%BD%8D%E5%9C%96%E6%9B%B8%E5%88%86%E9%A1%9E%E6%B3%95%E5%88%97%E8%A1%A8)
