--- a/content/blog/posts/diary/2025-07-17-I-am-30.md
+++ b/content/blog/posts/diary/2025-07-17-I-am-30.md
@@ -8,6 +8,8 @@ categories:
 
 小的时候的事情大多忘了，只记住一些关键的时间节点，升高中、考大学、读博、出国，从升高中（2011年）开始到现在，用一个词就可以形容，那就是“出走”。
 
+<!-- more -->
+
 这种出走的内涵还是丰富的，地理上，国内的几个大城市、瑞士的主要城市、美国东西海岸的几个城市、新加坡、澳洲的几个城市；精神世界上，不断地突破自己的界限。
 
 但是这种出走也过于迅速，自己对这个世界的认识，对人和社会的认识，稍有偏差。
