--- a/content/blog/posts/diary/2018-04-07-在杭州的36天.md
+++ b/content/blog/posts/diary/2018-04-07-在杭州的36天.md
@@ -10,6 +10,8 @@ categories:
 
 这是我第三次赶赴杭州。第一次是2016年的端午“出走”，这一次“出走”是为自己“忙碌“的大学生活的犒赏；亦是搬离良乡后挣扎的日子前的最后一次远行（也是唯一一次）。第二次便是2017年的暑假，这一次我战战兢兢地来参加浙江大学的夏令营，生怕这来之不易的机会溜走。这一次，2018年3月3日，我今晚从哈尔滨出发，去浙江大学完成我的毕业设计。
 
+<!-- more -->
+
 出走，是烙在我身上的一生的挥之不去的印记。
 
 哈西火车站我已经来了许多次了，这次赶上了特殊的哈西——从未体验过的入站两检，以及对乘坐开往北京的列车的乘客的差别对待。一切刀具、火源、助燃剂都要主动交出来。候车区域被围了起来，我们在外面排了两条长队，又遇到了再一次的金属探测和随机开包检查。我和S君顺利的通过了金属探测，正小步赶上已进站的乘客，Y君却被叫住，安检人员开始一点一点地查看她的旅行箱和背包了。查出来的不过是修眉刀之类的，我并不记得很清楚。我记得最清楚的是她与男朋友间的惜别，一去千里，竟有些深情与凝噎了。走了！
