--- a/content/blog/posts/diary/2021-12-13-Summary-of-CS725.md
+++ b/content/blog/posts/diary/2021-12-13-Summary-of-CS725.md
@@ -1,7 +1,7 @@
 ---
 date: 2021-12-13
 categories:
-    - tech-notes
+    - diary
 ---
 
 # A brief summary of CS-725
@@ -10,6 +10,8 @@ categories:
 Security](https://nebelwelt.net/teaching/21-725-SoftSec/), co-taught by Mathias
 Payer and Manuel Egele, is an inspiring seminar on software testing (finding
 bugs), and mitigation (protecting against the exploitation of bugs).
+
+<!-- more -->
 
 What we did during the seminar: give presentation, ask questions, and give
 feedbacks.
