--- a/content/blog/posts/diary/2025-01-02-books.md
+++ b/content/blog/posts/diary/2025-01-02-books.md
@@ -1,6 +1,12 @@
 ---
 date: 2025-01-02
+categories:
+    - diary
 ---
+
+# 我的书单
+
+<!-- more -->
 
 [recommended by ChatGPT](./booklist-chatgpt.png)
 
